[project]
name = "fuel_net_env"
version = "0.1.0"
description = "A global energy supply chain and geopolitical logistics reinforcement learning environment for OpenEnv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "huggingface_hub"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
